Added som public API